# py-roolz

./: Makefile  README.md  pyproject.toml
roolz/: __init__.py  _actions.py  _conditions.py  _operators.py  _rules.py  errors.py
tests/roolz/: test_actions.py  test_conditions.py  test_operators.py  test_rules.py
